# GLRender

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/chapter1/: CMakeLists.txt
client/chapter1/src/: main.cpp
client/chapter2/: CMakeLists.txt
client/chapter2/src/: main.cpp
client/chapter3/: CMakeLists.txt
client/chapter3/src/: main.cpp
client/chapter4/: CMakeLists.txt
client/chapter4/src/: main.cpp
client/chapter5/: CMakeLists.txt
client/chapter5/src/: main.cpp
client/chapter6/: CMakeLists.txt
client/chapter6/src/: main.cpp
client/resource/shader/: 2_1_basic_lighting.ps  2_1_basic_lighting.vs  2_1_light_cube.ps  4_1_texture.ps  5_1_transform.ps  5_1_transform.vs
client/shaderlib/: CMakeLists.txt
client/shaderlib/include/: gl_shader.h
client/shaderlib/src/: gl_shader.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.3.4/: CMakeLists.txt
